--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,18 +1,20 @@
+# version: "3.8"
+
 services:
   backend:
     build:
-      context: ../
-      dockerfile: docker/Dockerfile_backend
+      context: ../backend
+      dockerfile: ../docker/Dockerfile_backend
     container_name: matchito_backend
     restart: always
     ports:
       - "5000:5000"
+    depends_on:
+      - postgres_db
     env_file:
       - ../.env
     volumes:
       - ../backend:/app
-    depends_on:
-      - postgres_db
 
   postgres_db:
     image: postgres:15
@@ -21,7 +23,7 @@ services:
     env_file:
       - ../.env
     ports:
-      - "5433:5432"
+      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ../database/init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -36,13 +38,12 @@ services:
 
   nginx:
     build:
-      context: ../
-      dockerfile: docker/Dockerfile_nginx
-
+      context: ../nginx
+      dockerfile: ../docker/Dockerfile_nginx
     container_name: matchito_nginx
     restart: always
     ports:
-      - "8082:80"
+      - "8080:80"
     depends_on:
       - backend
 
