--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,8 +3,17 @@ server {
 
     location / {
         proxy_pass http://matchito_backend:5000;
+        proxy_http_version 1.1;
+
+        # Encabezados para soporte de WebSockets (descomenta si los necesitas)
+        # proxy_set_header Upgrade $http_upgrade;
+        # proxy_set_header Connection "upgrade";
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
     }
 }
+
