--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Configuración de la base de datos
 POSTGRES_DB=BA_db
-POSTGRES_USER=Bea
+POSTGRES_USER=bea
 POSTGRES_PASSWORD=X0gAsTbfZx7fwCMJroa7vA==
 POSTGRES_HOST=postgres_db
 POSTGRES_PORT=5432
