--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,5 +15,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
     }
+
+    # ✅ Configuración corregida para archivos estáticos
+    location /static/ {
+        root /app/backend/app/;
+        expires 1d;
+        access_log off;
+        add_header Cache-Control "public, max-age=86400";  # Cache de 1 día
+    }
+
 }
+
+
 
