--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,13 +18,13 @@ server {
 
     # ✅ Configuración corregida para archivos estáticos
     location /static/ {
-        root /app/backend/app/;
+        alias /app/backend/app/static/;
         expires 1d;
         access_log off;
-        add_header Cache-Control "public, max-age=86400";  # Cache de 1 día
+        add_header Cache-Control "public, max-age=86400";
     }
-
 }
+
 
 
 
