--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 # Configuración de la base de datos
+# Configuración de la base de datos PostgreSQL
 POSTGRES_DB=BA_db
 POSTGRES_USER=bea
 POSTGRES_PASSWORD=X0gAsTbfZx7fwCMJroa7vA==
 POSTGRES_HOST=postgres_db
 POSTGRES_PORT=5432
 
-# Configuración del correo SMTP
-MAIL_SERVER=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USE_TLS=True
-MAIL_USE_SSL=False
-MAIL_USERNAME=beatriz.lamiquizdauden@gmail.com
-# ⚠️ Usa una contraseña de aplicación segura
-MAIL_PASSWORD=proyectomatcha1234/
+# Configuración del correo SMTP (Mailtrap)
+MAIL_SERVER=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525                # Puedes usar 25, 465, 587 o 2525 según prefieras
+MAIL_USE_TLS=True             # Mailtrap soporta STARTTLS en todos los puertos
+MAIL_USE_SSL=False            # Se utiliza TLS, no SSL
+MAIL_USERNAME=b0a63197e117d6
+MAIL_PASSWORD=ea106f23bdd9d4     # Contraseña completa proporcionada
 
 # Clave secreta para Flask
 # ⚠️ Cambiar en producción
