--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ POSTGRES_USER=bea
 POSTGRES_PASSWORD=X0gAsTbfZx7fwCMJroa7vA==
 POSTGRES_HOST=postgres_db
 POSTGRES_PORT=5432
+FLASK_PORT=8081
+
 
 # Configuración del correo SMTP (Mailtrap)
 MAIL_SERVER=sandbox.smtp.mailtrap.io
