--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   database:
-    image: postgres:15
+    image: postgis/postgis:15-3.3  # ✅ Cambiamos a PostGIS
     container_name: postgres_db
     restart: always
     ports:
@@ -66,6 +66,7 @@ networks:
 
 volumes:
   pg_data:
+
 
 
 
